--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Unzip Project Files
-        run: unzip Ahmad-Client-Mod.zip
+      - name: Extract and Fix Path
+        run: |
+          unzip Ahmad-Client-Mod.zip
+          # Agar files folder ke andar hain toh unhe bahar nikal lo
+          if [ -d "Ahmad-Client-Mod" ]; then
+            mv Ahmad-Client-Mod/* .
+          fi
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
@@ -23,7 +28,7 @@ jobs:
           ./gradlew build
 
       - name: Upload Mod Jar
-        uses: actions/upload-artifact@v3
-        with:
-          name: Ahmad-Client-Mod-Jar
-          path: build/libs/*.jar
+          uses: actions/upload-artifact@v3
+          with:
+            name: Ahmad-Client-Mod-Jar
+            path: build/libs/*.jar
