--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Extract and Fix Path
-        run: |
-          unzip Ahmad-Client-Mod.zip
-          # Agar files folder ke andar hain toh unhe bahar nikal lo
-          if [ -d "Ahmad-Client-Mod" ]; then
-            mv Ahmad-Client-Mod/* .
-          fi
+      - name: Extract Files
+        run: unzip Ahmad-Client-Mod.zip
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
@@ -22,13 +17,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build Mod with Gradle
+      - name: Build Mod
         run: |
           chmod +x gradlew
           ./gradlew build
 
-      - name: Upload Mod Jar
-          uses: actions/upload-artifact@v3
-          with:
-            name: Ahmad-Client-Mod-Jar
-            path: build/libs/*.jar
+      - name: Save Mod File
+        uses: actions/upload-artifact@v3
+        with:
+          name: Ahmad-Client-Mod-Jar
+          path: build/libs/*.jar
